--- a/GezginApp/app/build.gradle
+++ b/GezginApp/app/build.gradle
@@ -33,6 +33,12 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.5.1'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 
