--- a/GezginApp/app/src/main/AndroidManifest.xml
+++ b/GezginApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddPhotoActivity"></activity>
+        <activity android:name=".AddNoteActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity
